[gd_scene load_steps=6 format=3 uid="uid://cy081y7gj5ds4"]

[ext_resource type="Script" path="res://assets/scenes/game/scripts/turn_ui_control.gd" id="1_5vbk5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c746l"]

[sub_resource type="LabelSettings" id="LabelSettings_jy2ak"]
font_size = 69

[sub_resource type="LabelSettings" id="LabelSettings_uexvr"]
font_size = 69

[sub_resource type="LabelSettings" id="LabelSettings_utwpc"]
font_size = 60
font_color = Color(0.756863, 0.756863, 0.756863, 1)

[node name="TurnUIControl" type="Panel"]
anchors_preset = -1
anchor_top = 0.35
anchor_right = 1.0
anchor_bottom = 0.65
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_c746l")
script = ExtResource("1_5vbk5")

[node name="PlayerPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.55
anchor_bottom = 1.0

[node name="PlayerLabel" type="Label" parent="PlayerPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "PLAYER1'S "
label_settings = SubResource("LabelSettings_jy2ak")
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 3

[node name="MovePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.55
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 3.05176e-05

[node name="MoveLabel" type="Label" parent="MovePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "MOVE"
label_settings = SubResource("LabelSettings_uexvr")
vertical_alignment = 1
autowrap_mode = 3

[node name="TurnPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.4
anchor_right = 0.45

[node name="TurnLabel" type="Label" parent="TurnPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "TURN 1"
label_settings = SubResource("LabelSettings_utwpc")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
